# common

Labirint/include/: ball.h  drawer.h  maze.h
Labirint/src/: ball.cpp  main.cpp  maze.cpp
MGPS/MGPS_client/: MGPS_client.pro  defines.h  llmdb_client.cpp  llmdb_client.h  llmdb_client_ext.cpp  llmdb_client_ext.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
MGPS/MGPS_client_cp9b/: MGPS_client_cp9b.pro  cp9b_client.cpp  cp9b_client.h  cp9b_client_ext.cpp  cp9b_client_ext.h  defines.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
MGPS/v12/: binr_interrupt_handler.c  defines.h  globals.c  globals.err  globals.h  llmdb.c  llmdb.err  llmdb.h  main.c  main.err  spi.c  spi.err  spi.h
MGPS/v12/nbproject/: Makefile-default.mk  Makefile-impl.mk  (+6 more)
MGPS/v14/: binr.c  binr.h  configuration_bits.h  defines.h  globals.c  globals.h  llmdb.c  llmdb.err  llmdb.h  llmdb_interrupt_handler.c  main.c  main.err  main.h  spi.c  spi.err  spi.h
MGPS/v17/: binr_interrupt_handler.c  defines.h  globals.c  llmdb.c  llmdb.err  main.c  main.err  spi.c  spi.err
Radar/include/: radar.h  servo.h  sonar.h
Radar/src/: main.cpp  radar.cpp  servo.cpp  sonar.cpp
cp9b_simple/: cp9b_lib.cpp  mainwindow.ui
life/: life.cpp  life.h  life.pro  main.cpp
new_dir/: РК1.2.odt
new_dir/build-rk1_2_test-Desktop_Qt4-Debug/: Makefile  rk1_2
new_dir/build-skirl_painter-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_qfieldview.cpp  moc_viewwindow.cpp  qrc_skirl_fe_pixmaps.cpp  skirl_painter  ui_viewwindow.h  ui_viewwindow_help.h
new_dir/build-skirl_painter-Desktop_Qt4-Debug/: Makefile  moc_mainwindow.cpp  moc_qfieldview.cpp  moc_viewwindow.cpp  qrc_skirl_fe_pixmaps.cpp  skirl_painter  ui_viewwindow.h  ui_viewwindow_help.h
new_dir/my_rk/: main.cpp  rk1_2_test.pro  skirl.h
new_dir/skirl_painter_src/: colorpalette.h  main.cpp  mainwindow.cpp  mainwindow.h  mimic.cpp  mimic.h  qcolorpicker.cpp  qcolorpicker.h  qfieldview.cpp  qfieldview.h  skirl_fe_pixmaps.qrc  skirl_painter.pro  viewwindow.cpp  viewwindow.h  viewwindow.ui  viewwindow_help.ui  viewwindow_settings.cpp
new_dir/skirl_painter_src/paletteeditor/: CMakeLists.txt  ColorEditor.ui  colorinfo.ui  main.cpp  paletteeditorwindow.cpp  paletteeditorwindow.h  paletteeditorwindow.ui  paletteviewer.cpp  paletteviewer.h
pass_gen/: main.cpp  pass_gen.pro  passgen.py  symbols.txt
pc_serial_dialog_stuffing/build-serial_dialog_stuffing-Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile.Debug
pc_serial_dialog_stuffing/serial_dialog_stuffing/: mainwindow.h  serial_dialog_stuffing.pro  serial_stuffing.cpp
serialport/cp9b_simple/: cp9b_lib.h  cp9b_simple.pro
serialport/serial_dialog/: mainwindow.cpp  mainwindow.h  mainwindow.ui  serial_dialog.pro  serial_prefix.cpp  serial_prefix.h  serial_stuffing.cpp  serial_stuffing.h  vars.h
serialport/stm_serial_dialog_prefix/: functions.c  functions.h  serial_dialog_prefix.uvoptx  serial_dialog_prefix.uvprojx  vars.h
serialport/stm_serial_dialog_stuffing/: functions.c  functions.h  main.c  serial_dialog_stuffing.uvguix.m  serial_dialog_stuffing.uvprojx  usart1_irq.c  vars.c  vars.h
shab/: flash.bat  main.c  shab.uvprojx
stm_serial_dialog_stuffing/: flash.bat  functions.c  functions.h  serial_dialog_stuffing.uvguix.anton  serial_dialog_stuffing.uvoptx  serial_dialog_stuffing.uvprojx  vars.c  vars.h
stm_serial_dialog_stuffing/Listings/: project.map  shab.map
stm_serial_dialog_stuffing/Objects/: core_cm3.crf  core_cm3.d  functions.crf  functions.d  main.crf  main.d  misc.crf  project.axf  project.build_log.htm  project.hex  project.htm  serial_dialog_stuffing_Target 1.dep  shab.htm  shab.lnp  stm32l1xx_adc.crf  stm32l1xx_adc.d  stm32l1xx_aes.crf  stm32l1xx_aes.d  stm32l1xx_aes_util.crf  stm32l1xx_aes_util.d  stm32l1xx_comp.crf  stm32l1xx_comp.d  stm32l1xx_dbgmcu.crf  stm32l1xx_dma.crf  stm32l1xx_dma.d  stm32l1xx_exti.crf  stm32l1xx_fsmc.crf  stm32l1xx_fsmc.d  stm32l1xx_gpio.crf  stm32l1xx_gpio.d  stm32l1xx_i2c.crf  stm32l1xx_iwdg.crf  stm32l1xx_pwr.crf  stm32l1xx_rcc.crf  stm32l1xx_rcc.d  stm32l1xx_rtc.crf  stm32l1xx_rtc.d  stm32l1xx_sdio.d  stm32l1xx_spi.crf  stm32l1xx_spi.d  (+10 more)
stm_serial_dialog_stuffing/build-serial_dialog_stuffing-Desktop_Qt_5_5_1_MinGW_32bit-Debug/: Makefile  Makefile.Release  ui_mainwindow.h
stm_serial_dialog_stuffing/serial_dialog_stuffing/: mainwindow.cpp  mainwindow.ui  serial_stuffing.cpp  serial_stuffing.h
(+216 files in other folders)
